Ajout du bouton pour afficher les droites de résistances et ajout des droites de réistance

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 !data_utils.py
 !callbacks.py
 !get_daily_prices.py
+!analysis_tools.py
 
 # Ne pas ignorer les dossiers spécifiques
 !prices_history/
